2023-03-15 Se modifica flujo de aprobación de matriz RH.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Cerrar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Cerrar.cshtml
@@ -716,7 +716,7 @@
 
                 swalWithBootstrapButtons.fire({
                     title: '¿Desea Continuar?',
-                    html: "Se cerrará la solicitud y se enviará notificación a RH.",
+                    html: "Se cerrará la solicitud y se enviará notificación al Jefe Directo y a RH.",
                     showCancelButton: true,
                     confirmButtonText: 'Aceptar',
                     cancelButtonText: 'Cancelar'
