--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
@@ -285,7 +285,7 @@
 
                         </div>
 
-                        <div class="ln_solid"></div>
+                        @*<div class="ln_solid"></div>
                         <div class="form-group row">
                             <span style="color:dimgrey"><b>&emsp; 3.3- INTERNET</b></span>
 
@@ -296,11 +296,11 @@
                             <div class="col-md-4 col-sm-4 ">
                                 <input type="text" id="id_internet_tipo" class="form-control" value="@(Model.IT_internet_tipo!=null ? Model.IT_internet_tipo.descripcion : "NO DISPONIBLE" )" readonly="readonly" />
                             </div>
-                        </div>
+                        </div>*@
 
                         <div class="ln_solid"></div>
                         <div class="form-group row">
-                            <span style="color:dimgrey"><b>&emsp; 3.4- COMUNICACIONES</b></span>
+                            <span style="color:dimgrey"><b>&emsp; 3.3- COMUNICACIONES</b></span>
                         </div>
 
                         @*COMUNICACIONES*@
@@ -351,7 +351,7 @@
 
                         <div class="ln_solid"></div>
                         <div class="form-group row">
-                            <span style="color:dimgrey"><b>&emsp; 3.5- CARPETAS EN RED</b></span>
+                            <span style="color:dimgrey"><b>&emsp; 3.4- CARPETAS EN RED</b></span>
                         </div>
 
                         @*CARPETAS EN RED*@
