--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Portal_2_0.Models.empleados
 
 @{
-    ViewBag.Title = "Crear Nuevo Empleado";
+    ViewBag.Title = "Registro de Nuevo Empleado";
     ViewBag.PrimerNivel = "recursos_humanos";
     ViewBag.SegundoNivel = "empleados";
     ViewBag.ControllerName = "Empleados";
@@ -13,6 +13,8 @@
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+    <!-- iCheck -->
+    <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/green.css")" rel="stylesheet">
 }
 
 @*Valores enviados previamente*@
@@ -41,7 +43,7 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                      
+
                         @using (Html.BeginForm("Create", "Empleados", FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal form-label-left" }))
                         {
                             @Html.AntiForgeryToken()
@@ -59,124 +61,111 @@
                             @* input para saber si está o no activo el campo de soporte *@
                             <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.numeroEmpleado, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.numeroEmpleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-1 col-sm-1 ">
                                     @Html.EditorFor(model => model.numeroEmpleado, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required = "required" } })
                                     @Html.ValidationMessageFor(model => model.numeroEmpleado, "", new { @class = "text-danger" })
                                 </div>
-                            </div>
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.C8ID, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.correo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3">
+                                    @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @readonly = "readonly" } })
+                                    @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
+                                </div>
+                                @Html.LabelFor(model => model.C8ID, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-1 col-sm-1">
                                     @Html.EditorFor(model => model.C8ID, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @readonly = "readonly" } })
                                     @Html.ValidationMessageFor(model => model.C8ID, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.nombre, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.nombre, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3">
                                     @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
                                 </div>
-                            </div>
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.apellido1, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.apellido1, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3">
                                     @Html.EditorFor(model => model.apellido1, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.apellido1, "", new { @class = "text-danger" })
                                 </div>
-                            </div>
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.apellido2, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.apellido2, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3">
                                     @Html.EditorFor(model => model.apellido2, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.apellido2, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.correo, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
-                                    @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @readonly = "readonly" } })
-                                    @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.nueva_fecha_nacimiento, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.nueva_fecha_nacimiento, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-2 col-sm-2">
                                     @Html.EditorFor(model => model.nueva_fecha_nacimiento, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.nueva_fecha_nacimiento, "", new { @class = "text-danger" })
                                 </div>
+                                @Html.LabelFor(model => model.sexo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-2 col-sm-2">
+                                    <div class="col-md-6 col-sm-6">
+                                        <input type="radio" id="male" name="sexo" value="M" @(Model != null && Model.sexo == "M" ? "checked" : String.Empty) required>
+                                        <nolabel>
+                                            <label for="male">Hombre</label>
+                                        </nolabel>
+                                    </div>
+                                    <div class="col-md-6 col-sm-6">
+                                        <input type="radio" id="female" name="sexo" value="F" @(Model != null && Model.sexo == "F" ? "checked" : String.Empty)>
+                                        <nolabel>
+                                            <label for="female">Mujer</label>
+                                        </nolabel>
+                                    </div>
+
+                                    @Html.ValidationMessageFor(model => model.sexo, "", new { @class = "text-danger" })
+                                </div>
                             </div>
-                            @*<div class="item form-group">
-                @Html.LabelFor(model => model.telefono, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                <div class="col-md-6 col-sm-6 ">
-                    @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.telefono, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="item form-group">
-                @Html.LabelFor(model => model.extension, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                <div class="col-md-6 col-sm-6 ">
-                    @Html.EditorFor(model => model.extension, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.extension, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="item form-group">
-                @Html.LabelFor(model => model.celular, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                <div class="col-md-6 col-sm-6 ">
-                    @Html.EditorFor(model => model.celular, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.celular, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
+                            <div class="ln_solid"></div>
+
+                            <div class="form-group row">
+                                <span style="color:black"><b>ESTRUCTURA ORGANIZACIONAL</b></span>
+                            </div>
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                <!--id jefe directo -->
+                                @Html.LabelFor(model => model.id_jefe_directo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3">
+                                    @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.ValidationMessageFor(model => model.id_jefe_directo, "", new { @class = "text-danger" })
+                                </div>
+                                @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-2 col-sm-2">
                                     @Html.EditorFor(model => model.ingresoFecha, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
                                     @Html.ValidationMessageFor(model => model.ingresoFecha, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            @*<div class="item form-group">
-                @Html.LabelFor(model => model.bajaFecha, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                <div class="col-md-6 col-sm-6 ">
-                    @Html.EditorFor(model => model.bajaFecha, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.bajaFecha, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.planta_clave, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.planta_clave, htmlAttributes: new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3">
                                     @Html.DropDownList("planta_clave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.planta_clave, "", new { @class = "text-danger" })
                                 </div>
-                            </div>
-                            <div class="item form-group">
-                                <!--id jefe directo -->
-                                @Html.LabelFor(model => model.id_jefe_directo, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
-                                    @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
-                                    @Html.ValidationMessageFor(model => model.id_jefe_directo, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
 
-                            <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align">&Aacute;rea/Departamento</label>
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.id_area, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3 ">
                                     @Html.DropDownList("id_area", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.id_area, "", new { @class = "text-danger" })
                                 </div>
-                            </div>
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.puesto, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.puesto, htmlAttributes: new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-3 col-sm-3">
                                     @Html.DropDownList("puesto", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.puesto, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
+                            <div class="ln_solid"></div>
+
+                            <div class="form-group row">
+                                <span style="color:black"><b>FOTOGRAF&Iacute;A</b></span>
+                            </div>
+
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.id_fotografia, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                @Html.LabelFor(model => model.id_fotografia, htmlAttributes: new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-5 col-sm-5">
                                     <div class="input-group">
                                         <div class="custom-file">
                                             @Html.TextBoxFor(m => m.ArchivoImagen, new { @class = "custom-file-input", type = "file", @accept = ".png, .jpeg, .jpg, .gif, .bmp" })
@@ -186,11 +175,20 @@
                                     @Html.ValidationMessageFor(m => m.ArchivoImagen, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+                            <!-- La imagen que vamos a usar para previsualizar lo que el usuario selecciona -->
+                            <div class="item form-group">
+                                <div class="col-md-1 col-sm-1">                                    
+                                </div>
+                                <div id="div-img-container" class="item form-group">
+                                    <img id="imagenPrevisualizacion">
+                                </div>
+
+                            </div>
 
                             <div class="ln_solid"></div>
                             <div class="item form-group">
-                                <div class="col-md-6 col-sm-6 offset-md-3">
-                                    <button type="submit" class="btn btn-success">Guardar</button>
+                                <div class="col-md-12 col-sm-12 ">
+                                    <button type="submit" class="btn btn-success btn-lg float-right"><i class="fa-regular fa-floppy-disk"></i> Guardar</button>
                                 </div>
                             </div>
                         }
@@ -212,7 +210,22 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
     @Scripts.Render(Url.Content("~/Scripts/Forms/empleados.js?" + DateTime.Now))
+    <!-- iCheck -->
+    @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
-}
+    <script>
+
+        $(document).ready(function () {
+            $('input').iCheck({
+                checkboxClass: 'icheckbox_square-green',
+                radioClass: 'iradio_square-green',
+                increaseArea: '20%' // optional
+            });
+        });
+        window.onload = function () {
+            clicMenu(1);
+        }
+
+    </script>
 }
 
