--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
@@ -5,22 +5,28 @@
     ViewBag.PrimerNivel = "recursos_humanos";
     ViewBag.SegundoNivel = "empleados";
     ViewBag.ControllerName = "Empleados";
+
 }
 
 @section estilos
 {
-
+    <!-- Select2 -->
+    <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+    <!-- iCheck -->
+    <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/green.css")" rel="stylesheet">
     <style>
         .profile-picture {
-            width: 300px;
-            height: 300px;
+            width: 350px;
+            height: 350px;
         }
     </style>
-
 }
+
 
 <div class="right_col" role="main">
     <div class="">
+
         <div class="clearfix"></div>
 
         <div class="row">
@@ -31,123 +37,119 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <br />
 
-                        @if (Model.id_fotografia.HasValue)
+                        <div class="form-group row">
+                            <span style="color:black"><b>DATOS GENERALES</b></span>
+                        </div>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.numeroEmpleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-1 col-sm-1 ">
+                                @Html.EditorFor(model => model.numeroEmpleado, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            @Html.LabelFor(model => model.correo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            @Html.LabelFor(model => model.C8ID, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-1 col-sm-1">
+                                @Html.EditorFor(model => model.C8ID, new { htmlAttributes = new { @class = "form-control",@readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.nombre, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            @Html.LabelFor(model => model.apellido1, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                @Html.EditorFor(model => model.apellido1, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                            @Html.LabelFor(model => model.apellido2, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                @Html.EditorFor(model => model.apellido2, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.nueva_fecha_nacimiento, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-2 col-sm-2">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.nueva_fecha_nacimiento)" readonly />
+                            </div>
+                            @Html.LabelFor(model => model.sexo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-2 col-sm-2">
+                                <div class="col-md-6 col-sm-6">
+                                    <input type="radio" id="male" name="sexo" value="M" @(Model != null && Model.sexo == "M" ? "checked" : String.Empty) disabled>
+                                    <nolabel>
+                                        <label for="male">Hombre</label>
+                                    </nolabel>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <input type="radio" id="female" name="sexo" value="F" @(Model != null && Model.sexo == "F" ? "checked" : String.Empty) disabled>
+                                    <nolabel>
+                                        <label for="female">Mujer</label>
+                                    </nolabel>
+                                </div>
+
+                                @Html.ValidationMessageFor(model => model.sexo, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="ln_solid"></div>
+
+                        <div class="form-group row">
+                            <span style="color:black"><b>ESTRUCTURA ORGANIZACIONAL</b></span>
+                        </div>
+                        <div class="item form-group">
+                            <!--id jefe directo -->
+                            @Html.LabelFor(model => model.id_jefe_directo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
+                            </div>
+                            @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-2 col-sm-2">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.ingresoFecha)" readonly />
+                            </div>
+                        </div>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.planta_clave, htmlAttributes: new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.plantas.descripcion)" readonly />
+                            </div>
+                            @Html.LabelFor(model => model.id_area, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.Area.descripcion)" readonly />
+                            </div>
+                            @Html.LabelFor(model => model.puesto, htmlAttributes: new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-3 col-sm-3">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.puesto1.descripcion)" readonly />
+                            </div>
+                        </div>
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>FOTOGRAF&Iacute;A</b></span>
+                        </div>
+                        @if (Model != null && Model.id_fotografia.HasValue)
                         {
+                            <!-- La imagen que vamos a usar para previsualizar lo que el usuario selecciona -->
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.id_fotografia, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-4 col-sm-4 ">
-                                    <div id="crop-avatar">
-                                        <!-- Current avatar -->
-                                        <img class="img-responsive avatar-view profile-picture" src="@Model.ImageToBase64()" alt="Avatar" title="Change the avatar">
-                                    </div>
+                                <div class="col-md-1 col-sm-1">
+                                </div>
+                                <div id="div-img-container" class="item form-group">
+                                    <img id="imagenPrevisualizacion" src="@(Model.id_fotografia.HasValue ? Model.ImageToBase64(350, 350) : String.Empty)">
                                 </div>
                             </div>
                         }
                         else
                         {
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.id_fotografia, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-4 col-sm-4 ">
-                                    <div id="crop-avatar">
-                                        <!-- Current avatar -->
-                                        <img class="img-responsive avatar-view profile-picture" src="/Content/images/user.png" alt="Avatar" title="Change the avatar">
-                                    </div>
-                                </div>
+                                <p>No disponible</p>
                             </div>
                         }
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.numeroEmpleado, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.numeroEmpleado)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.C8ID, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.C8ID)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.nombre, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.nombre)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.apellido1, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.apellido1)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.apellido2, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.apellido2)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.correo, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Model.correo" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.nueva_fecha_nacimiento, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.nueva_fecha_nacimiento)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.ingresoFecha)" readonly />
-                            </div>
-                        </div>
-                        @if (Model.activo == false)
-                        {
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.bajaFecha, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
-                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.bajaFecha)" readonly />
-                                </div>
-                            </div>
-                        }
-
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.planta_clave, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.plantas.descripcion)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            <!--id jefe directo -->
-                            @Html.LabelFor(model => model.id_jefe_directo, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
-                            </div>
-                        </div>
-
-                        <div class="item form-group">
-                            <label class="col-form-label col-md-3 col-sm-3 label-align">&Aacute;rea/Departamento</label>
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.Area.descripcion)" readonly />
-                            </div>
-                        </div>
-                        <div class="item form-group">
-                            @Html.LabelFor(model => model.puesto, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                            <div class="col-md-6 col-sm-6 ">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.puesto1.descripcion)" readonly />
-                            </div>
-                        </div>
-
-                       
                     </div>
                 </div>
                 <div>
                     <br />
-                    <a onclick="volverAtras()" class="btn btn-round btn-info btm-sm" title="Volver" style="color:white">
+                    <a href="@Url.Action("Index", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
                         <i class="fa fa-arrow-circle-left"></i> Volver al listado
                     </a>
                 </div>
@@ -155,3 +157,26 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
+    @Scripts.Render(Url.Content("~/Scripts/Forms/empleados.js?" + DateTime.Now))
+    <!-- iCheck -->
+    @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+    <script>
+
+        $(document).ready(function () {
+            $('input').iCheck({
+                checkboxClass: 'icheckbox_square-green',
+                radioClass: 'iradio_square-green',
+                increaseArea: '20%' // optional
+            });
+        });
+        window.onload = function () {
+            clicMenu(1);
+        }
+
+    </script>
+}
