--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
@@ -14,7 +14,7 @@
 @section estilos
 {
     <!-- DataTables -->
-    @Styles.Render("~/Content/dataTables_css")    
+    @Styles.Render("~/Content/dataTables_css")
 
     <!-- SweetAlert2 -->
     <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
@@ -84,9 +84,9 @@
                                             Crear nuevo
                                         </a>
                                     </div>
-                                     <div class="form-group" style="text-align:right;color:black">
+                                    <div class="form-group" style="text-align:right;color:black">
 
-                                        <a  class="btn btn-warning" id="limpiar-btn">
+                                        <a class="btn btn-warning" id="limpiar-btn">
                                             <i class="fa-solid fa-arrows-rotate"></i>
                                             Limpiar Filtros
                                         </a>
@@ -94,17 +94,21 @@
                                     <table id="datatable_individual_searching" class="table table-striped table-bordered" cellspacing="0" style="width:100%">
                                         <thead>
                                             <tr>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.nombre)
-                                                </th>
+                                                <th>Acciones</th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.numeroEmpleado)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.nombre)
                                                 </th>
                                                 <th>
                                                     Planta
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_area)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.puesto)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_jefe_directo)
@@ -118,46 +122,13 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
-                                                <th>Acciones</th>
+
                                             </tr>
                                         </thead>
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
                                                 <tr style="@(item.activo == false ? "background-color:#FF5050; color:#990000; font-weight:600" :"" )">
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.ConcatNombre)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.numeroEmpleado)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.plantas.descripcion)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.Area.descripcion)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.empleados2.ConcatNombre)
-                                                    </td>
-
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.C8ID)
-                                                    </td>
-
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.correo)
-                                                    </td>
-                                                    <td>
-                                                        @if (item.activo.HasValue && item.activo.Value)
-                                                        {
-                                                            <span>SI</span>
-                                                        }
-                                                        else
-                                                        {
-                                                            <span>NO</span>
-                                                        }
-                                                    </td>
                                                     <td nowrap>
                                                         <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btn-sm" title="Editar">
                                                             <i class="fa-regular fa-pen-to-square"></i>
@@ -187,25 +158,64 @@
                                                                 <i class="fa fa-check"></i>
                                                             </a>
                                                         }
-
-
                                                     </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.numeroEmpleado)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.plantas.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.puesto1.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados2.ConcatNombre)
+                                                    </td>
+
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.C8ID)
+                                                    </td>
+
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.correo)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.activo.HasValue && item.activo.Value)
+                                                        {
+                                                            <span>SI</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>NO</span>
+                                                        }
+                                                    </td>
+
                                                 </tr>
                                             }
                                         </tbody>
                                         <tfoot>
                                             <tr>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.nombre)
-                                                </th>
+                                                <th>Acciones</th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.numeroEmpleado)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.nombre)
                                                 </th>
                                                 <th>
                                                     Planta
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_area)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.puesto)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_jefe_directo)
@@ -219,12 +229,15 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
-                                                <th>Acciones</th>
                                             </tr>
                                         </tfoot>
                                     </table>
                                 </div>
                                 <br />
+                                <div class="form-group">
+                                    <button type="button" id="export-btn" class="btn btn-success"><i class="fa-regular fa-file-excel"></i> Exportar Excel</button>
+                                    <button type="button" id="export-tkmmnet-btn" class="btn btn-info"><i class="fa-regular fa-file-excel"></i> Formato tkmmNet</button>
+                                </div>
 
                             </div>
                         </div>
@@ -250,11 +263,12 @@
 
             //maneja el envió el del formulario
             $('#limpiar-btn').click(function (e) {
-                BloqueaPantalla();
-              
-                //Actualizamos la página
-                location.reload();
-              
+                table.search('');
+                table.columns().search('').draw();
+                $('input', $('.filters th')[0]).each(function () {
+                    $(this).val('');
+                });
+
             });
 
             // Setup - add a text input to each footer cell
@@ -264,7 +278,7 @@
             });
 
             // DataTable
-            var table = $('#datatable_individual_searching').DataTable({
+            table = $('#datatable_individual_searching').DataTable({
                 buttons: [
                     'copy', 'excel', 'pdf'
                 ],
@@ -292,13 +306,115 @@
                 "language": {
                     "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
                 },
-              
+                stateSave: true,
+
+            });
+
+            var state = table.state.loaded();
+            if (state) {
+
+                table.columns().eq(0).each(function (colIdx) {
+
+                    var colSearch = state.columns[colIdx].search;
+
+                    if (colSearch.search) {
+
+                        let indice = 0;
+                        //  $('input', $('.filters th')[colIdx]).val(colSearch.search);
+                        $('input', $('.filters th')[colIdx]).each(function () {
+                            if (indice == colIdx + 1)
+                                $(this).val(colSearch.search);
+                            indice++;
+                        });
+                    }
+                });
+                table.draw();
+            }
+
+            //evento para exportar a excel
+            $("#export-btn").click(function () {
+                exportar("exportar");
+            });
+            $("#export-tkmmnet-btn").click(function () {
+                exportar("exportartkmm");
             });
 
             $.unblockUI();
 
         });
 
+        function exportar(ruta) {
+            let index = 0;
+            //variables de búsqueda
+            let numeroEmpleado = '';
+            let nombre = '';
+            let planta = '';
+            let departamento = '';
+            let puesto = '';
+            let jefe_directo = '';
+            let C8ID = '';
+            let correo = '';
+            let activo = '';
+
+            $('input', $('.filters th')[0]).each(function () {
+                switch (index) {
+                    case 3:
+                        numeroEmpleado = $(this).val();
+                        break;
+                    case 4:
+                        nombre = $(this).val();
+                        break;
+                    case 5:
+                        planta = $(this).val();
+                        break;
+                    case 6:
+                        departamento = $(this).val();
+                        break;
+                    case 7:
+                        puesto = $(this).val();
+                        break;
+                    case 8:
+                        jefe_directo = $(this).val();
+                        break;
+                    case 9:
+                        C8ID = $(this).val();
+                        break;
+                    case 10:
+                        correo = $(this).val();
+                        break;
+                    case 11:
+                        activo = $(this).val();
+                        break;
+                }
+                index++;
+            });
+
+            //carga ventana con parámetros url
+            let url = new URL(location.href + "/" + ruta);
+            if (numeroEmpleado != '')
+                url.searchParams.set('numeroEmpleado', numeroEmpleado)
+            if (nombre != '')
+                url.searchParams.set('nombre', nombre)
+            if (planta != '')
+                url.searchParams.set('planta', planta)
+            if (departamento != '')
+                url.searchParams.set('departamento', departamento)
+            if (puesto != '')
+                url.searchParams.set('puesto', puesto)
+            if (jefe_directo != '')
+                url.searchParams.set('jefe_directo', jefe_directo)
+            if (C8ID != '')
+                url.searchParams.set('C8ID', C8ID)
+            if (correo != '')
+                url.searchParams.set('correo', correo)
+            if (activo != '')
+                url.searchParams.set('activo', activo)
+
+            window.open(url);
+        }
+
+        //variable global para la tabla
+        var table;
 
         //agranda el tamaño de la barra
         window.onload = function () {
