--- a/CódigoFuente/BitacorasProduccion/Views/IT_epo_wsus_reporte/EpoNoInventario.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_epo_wsus_reporte/EpoNoInventario.cshtml
@@ -50,7 +50,11 @@
                     <div class="x_content">
                         <div class="row">
                             <div class="col-sm-12">
-
+                                <div>
+                                    <h2>&Uacute;ltima Actualizaci&oacute;n ePO: @((string)ViewBag.FechaEPO)</h2>
+                                    <h2>&Uacute;ltima Actualizaci&oacute;n WSUS: @((string)ViewBag.FechaWSUS)</h2>
+                                    <br />                                   
+                                </div>
                                 <div class="card-box table-responsive">
 
                                     <table id="datatable1" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
