--- a/CódigoFuente/BitacorasProduccion/Views/IT_epo_wsus_reporte/InventarioNoWsus.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_epo_wsus_reporte/InventarioNoWsus.cshtml
@@ -53,7 +53,11 @@
                     <div class="x_content">
                         <div class="row">
                             <div class="col-sm-12">
-
+                                <div>
+                                    <h2>&Uacute;ltima Actualizaci&oacute;n ePO: @((string)ViewBag.FechaEPO)</h2>
+                                    <h2>&Uacute;ltima Actualizaci&oacute;n WSUS: @((string)ViewBag.FechaWSUS)</h2>
+                                    <br />
+                                </div>
                                 <div class="card-box table-responsive">
 
                                     <table id="datatable_inventory" class="table table-striped table-bordered  nowrap" cellspacing="0" width="100%">
